# GeometryEngine

./: CLAUDE.md  CMakeLists.txt  CMakeScripts.cmake
data/: NewRegion.txt  testData.txt
include/app/: Layer.h  LayerManagerWidget.h  MainWindow.h
include/base/: BoundingBox.h  Coord.h
include/dataengine/: IReader.h  WktFileReader.h
include/geometry/: GeoLine.h  GeoPoint.h  GeoRegion.h  Geometry.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  GeometryWidget.cpp  GeometryWidget.h  Layer.cpp  LayerManagerWidget.cpp  MainWindow.cpp  main.cpp
src/base/: CMakeLists.txt  Coord.cpp
src/dataengine/: CMakeLists.txt  WktFileReader.cpp
src/geometry/: CMakeLists.txt  GeoLine.cpp  GeoPoint.cpp  GeoRegion.cpp
